--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,18 @@
 
 body {
   background-color: lightyellow;
+  background-image: url('/images/taichi.svg');
+  background-size: cover;
+  animation: rotate 10s linear infinite;
+}
+
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 button {
